<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#009bdf"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CipherSelection">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/substitution"
        android:id="@+id/buttonSubstitution"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/additive"
        android:id="@+id/buttonAdditive"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/buttonSubstitution"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplicative"
        android:id="@+id/buttonMultiplacitive"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/buttonAdditive"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewStar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/star"
        android:src="@drawable/cryptography_barnstar"
        android:layout_alignParentEnd="true" />
</RelativeLayout>

