<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#009bdf"
    tools:context="com.example.steve.ciphertext.Substitution">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarKey"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:progress="0"
        android:indeterminate="false"
        android:max="35" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:background="#FFFFFF"
        android:lines="7"
        android:id="@+id/editTextPlainText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textViewShift"
        android:layout_below="@+id/buttonPaste" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:lines="7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewCipherText"
        android:layout_below="@+id/seekBarKey"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ems="10"
        android:maxLength="2"

        android:id="@+id/textViewShift"
        android:layout_above="@+id/seekBarKey"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/key"
        android:id="@+id/textViewKey"
        android:layout_alignBottom="@+id/textViewShift"
        android:layout_toStartOf="@+id/textViewShift" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:id="@+id/buttonSMS"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCopyCipherText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copy" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paste"
        android:id="@+id/buttonPaste"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
